# marziali-hub

./: .env.example  .env.local.template  .env.production.template  .gitignore  .ralphrc  AI_KNOWLEDGE_BASE_2026_01_31.json  ALLOCAZIONE_PORTE.md  ARCHITETTURA_E_DEPLOYMENT.md  BRANCH_VERIFICATION.md  BUG_FIX_REPORT_2026_02_03_A.md  CATALOGO_COMPLETO_BACKEND.md  CATALOGO_COMPLETO_FRONTEND.md  CATALOGO_MOBILE_FLUTTER.md  CHANGELOG.md  CLAUDE.md  CREDENZIALI_SVILUPPO.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEV_ERRORI_2026_02_01.md  DEV_QUICK_FIX_2026_01_30_C.md  DOCS_INVENTORY_2026_01_23.md  DOCUMENTO_MIGRAZIONE_REFACTORING.md  DOWNLOAD_TEST_DATA_INSTRUCTIONS.md  ENDPOINT_AUDIT_2026_01_23.md  ERRORE_ENUM_POSTGRESQL_MEDIA_CENTER.md  ERROR_KNOWLEDGE_BASE_2026_01_31.json  ERROR_KNOWLEDGE_BASE_2026_02_01.json  ERROR_KNOWLEDGE_BASE_2026_02_03.json  ERROR_KNOWLEDGE_BASE_MEDIA_CENTER.json  FLUTTER_APP_CREATED_20251201.md  FLUTTER_FIX_REPORT_2026_01_16.md  backup_progetto.bat  change-postgres-port.ps1  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  Dockerfile.prod  QUICK_START_TESTING.md  README_SETUP_PROFILI.md  UTENTI_TEST_E_ACCESSI.md  cleanup_test_data.py  fix_live_events_event_type.sql  init_database.py  main.py  openapi.json  pyproject.toml  pytest.ini  requirements.txt  run_test_verification.py  run_tests.py  seed_database.py  seed_test_users_api.py  setup_database.sql  special_projects_backup.json  test_api_endpoints.py
backend/core/: __init__.py  auth.py  cache.py  database.py  email.py  helpers.py  security.py  sentry_config.py  stripe_config.py
backend/data/: martial_arts_terminology.json
backend/docs/: API_EXAMPLES.md  API_REFERENCE_COMPLETE.md  ERROR_KNOWLEDGE_BASE_2025_01_10.json  LESSONS_LEARNED_2025_01_10.md  OPENAPI_SCHEMA.yaml  POSTMAN_COLLECTION.json
backend/middleware/: __init__.py  compression.py
backend/migrations/: 001_add_video_moderation.sql  002_add_payments_subscriptions.sql  003_add_curriculum_tables.sql  004_add_pause_ads_tables.sql  005_add_royalties_tables.sql  006_add_special_projects_tables.sql  007_add_missing_columns.sql  008_add_avatars_table.sql  add_gdpr_columns.sql  add_user_columns.sql  create_events_tables.py  quick_fix.py  run_007_migration.py  run_migration.py
backend/models/: __init__.py  ads.py  analytics.py  avatar.py  communication.py  content_type.py  curriculum.py  donation.py  download.py  ingest_project.py  live_minor.py  user.py  (+6 more)
(+797 files in other folders)
